test/expected/cli/exec_exit_codes.out
== a missing command with a slash exits 127:
shit: 1:6: error: Command '/nonexistent/cmd' was not found.
     1 |  exec /nonexistent/cmd
       |       ^~~~~~~~~~~~~~~~ here.
rc=127
== a missing command on the PATH exits 127:
shit: 1:6: error: Command 'nonexistent_cmd_xyz' was not found.
     1 |  exec nonexistent_cmd_xyz
       |       ^~~~~~~~~~~~~~~~~~~ here.
rc=127
== a non-executable file exits 126:
shit: Unable to execute `TMPDIR/notexec` because Permission denied
rc=126
== exec replaces the shell and runs the command:
replaced
== exec in a command substitution runs as a child:
[sub]
